Updated info about cookies

--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
         t.async = true;
         t.id    = 'cio-tracker';
         // THE ONLY THING YOU NEED TO CHANGE IS THE DATA-SITE-ID
-        t.setAttribute('data-site-id', '30860d08f0f6dd196dcc');
-        t.src = 'http://mvp.dev/assets/track.js';
+        t.setAttribute('data-site-id', 'xxxxxxxxxxxxxxxxxxx');
+        t.src = 'https://app.customer.io/assets/track.js';
         s.parentNode.insertBefore(t, s);
       })();
 
