--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <div id="errorMessage" class="alert alert-danger"></div>
 
           <div class="input-prepend">
-            <span class="add-on"><i class="icon-user"></i></span><input class="input-large" type="text" id="firstname" name="firstname" placeholder="firstname">
+            <span class="add-on"><i class="icon-user"></i></span><input class="input-large" type="text" id="cio-firstname" name="firstname" placeholder="firstname">
           </div>
         
           <div class="input-prepend">
-            <span class="add-on"><i class="icon-envelope"></i></span><input type="text" id="email" name="email" autocorrect="off" autocapitalize="off" data-initial="email@address.com" placeholder="email@domain.com">
+            <span class="add-on"><i class="icon-envelope"></i></span><input type="text" id="cio-email" name="email" autocorrect="off" autocapitalize="off" data-initial="email@address.com" placeholder="email@domain.com">
           </div>
 
           <br/>
